--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "solar-system",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "@astrojs/ts-plugin": "^1.10.4",
+    "astro": "^5.4.0",
+    "three": "^0.174.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3"
+  }
 }
